# liangxiao

./: .coverage  .env.example  .env.local  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .processed_issue_21  .processed_issue_22  .processed_issue_63  .processed_issue_7  .processed_issue_8  ACCEPTANCE_TESTS.md  AI_DEVELOPER_GUIDE.md  AI_QUICK_START.md  API_CONFIGURATION.md  CLAUDE.md  CLAUDE_tmp.html  DEMO_FILE_PROCESSED.md  DEMO_FILE_WITH_PHRASE.md  DEMO_README.md  DEPLOY.md  DEVELOPMENT.md  Dockerfile  LOGGING_IMPROVEMENTS.md  Makefile  PROJECT_STRUCTURE.md  README.md  REAL_WORKFLOW_DEMO.md  WORKFLOW_EXECUTION_SUMMARY.md  articles.txt  auth.py  chatlog-article-topics.md  config.py  coverage.xml  create_actual_pr.py  create_real_pr_api.py  create_smart_developer_demo.py  create_working_pr.py  cucumber.js  (+48 more)
.bmad-core/: install-manifest.yaml
.claude/: CLAUDE.md
.github/: test-workflow.sh
.husky/: pre-push
__tests__/: vercel-deployment.test.js
agents/: __init__.py
api/: debug.py  health.py  webhooks.py
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
benyu/: .persona  style_guide.md
components/: ArticleCard.tsx  ArticleContent.tsx  ErrorBoundary.tsx  ImageWithFallback.tsx  MarkdownRenderer.tsx  PostsClient.tsx  README.md  ReadingProgress.tsx  SocialShare.tsx
core/: env_loader.py  exceptions.py  interfaces.py  logging.py  state_machine.py  unified_logging.py  webhook_security.py  workspace_manager.py
docs/: error-handling.md  improved-startup-and-testing.md  (+6 more)
(+576 files in other folders)
