[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-orchestrator"
version = "0.1.0"
description = "AI Coding Team Orchestrator - Multi-agent system for automated coding tasks"
authors = ["AI Coding Team"]
readme = "README.md"
packages = [{include = ".", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
langchain = "^0.1.0"
langgraph = "^0.0.20"
langchain-openai = "^0.0.5"
openai = "^1.10.0"
python-dotenv = "^1.0.0"
httpx = "^0.25.0"
aiofiles = "^23.0.0"
redis = "^5.0.0"
psycopg2-binary = "^2.9.9"
pygithub = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
pytest-cov = "^4.1.0"
debugpy = "^1.8.0"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true